syntax = "proto3";
option go_package = "github.com/headblockhead/railreader/egesters/grpc/proto";

message DepartureRequest {
    string station_code = 1;
}

message DepartureResponse {
    string schedule_id = 1;
}
